--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -83,6 +83,7 @@ h4 {
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+  border: 4px dashed #fff;
 }
 .button:hover{
   background-color: var(--color-primary);
