--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -22,14 +22,14 @@ padding: 2rem 6rem;
   gap:10px
 }
 .contactSectionInfoIcon{
-  background: var(--color-dark);
+background: var(--color-dark);
 padding: .5rem .5rem;
 border-radius: 100%;
 
 }
 .contactSectionInfoIcon:hover{
 color: var(--color-dark);
-background-color: var(--color-text);
+background-color:var(--color-text);
 
 
 }
@@ -37,7 +37,7 @@ background-color: var(--color-text);
 font-size: 1.4rem;
 font-family:'Roboto';
 font-weight: 700;
-letter-spacing: 2px;
+letter-spacing: 1.5px;
 }
 
 hr{
@@ -54,6 +54,7 @@ hr{
   margin-top: 2rem;
   justify-content: space-between;
   height: 3rem;
+  font-family:'Roboto';
 }
   
 @media screen and (max-width: 830px) {
