--- a/src/components/projects/ProjectCard.module.css
+++ b/src/components/projects/ProjectCard.module.css
@@ -7,12 +7,12 @@
   background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
   box-shadow: 0 16px 14px 0 #04152d;
   padding: 1rem;
-  gap:.6rem;
-  max-width: 345px;
-
+  gap:1rem;
+  max-width: 350px;
+  transition: all 0.4s ease;
+margin:2rem auto;
 
 }
-
 
 .title {
   font-size: 1.5rem;
@@ -24,12 +24,13 @@
   font-family: 'Roboto';
   margin-top: .3rem;
   font-size: 1.2rem;
+  text-align: justify;
 }
 
 
 .image{
   width:20rem;
-  height: 10rem;
+  height: 12rem;
 }
 .skills {
   margin-top: 14px;
@@ -51,7 +52,7 @@
 .links {
   width: 100%;
   display: flex;
-gap:1rem
+  gap:1rem
 
  
 }
@@ -64,4 +65,8 @@ gap:1rem
   background: var(--color-primary);
   padding:.5rem;
   border-radius: .5rem;
+}
+@media screen and (max-width: 830px){
+
+
 }
