--- a/src/components/projects/Projects.module.css
+++ b/src/components/projects/Projects.module.css
@@ -3,13 +3,12 @@
 .container {
   margin-top: 76px;
   color: var(--color-text);
-  margin-left: 10%;
-  margin-right: 10%;
-}
+  margin: 3rem 6rem;
+} 
 
 .title {
   font-size: 35px;
-  font-weight: 700;
+  font-weight: 800;
   letter-spacing: 1.75px;
   text-transform: uppercase;
 }
@@ -23,4 +22,9 @@
   justify-content: center;
   gap: 15px;
   width: 100%;
+}
+@media screen and (max-width: 830px){
+.title {
+   margin:0 -5rem ;
+  }
 }
