--- a/src/components/skills/Skills.module.css
+++ b/src/components/skills/Skills.module.css
@@ -1,11 +1,17 @@
 @import "../../Var.css";
 
 .container {
-    display: flex;
-    flex-direction: column;
-   
-  color: var(--color-text);
-  margin: 3rem 6rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  position: relative;
+  background: linear-gradient(90deg,var( --color-secondary), var( --color-primary));
+ 
+  border-radius: 1rem;
+  padding: 3rem;
+  margin: 5rem 7rem;
+  z-index: 1;
+  gap: 1rem;
 }
 
 .title {
@@ -24,13 +30,12 @@
 }
 
 .skills {
-  width: 70%;
+  width: 80%;
   justify-content: center;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 5rem;
-
+  gap: 3rem;
 }
 
 .skill {
@@ -38,25 +43,23 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-
 }
 
 .skillImageContainer {
   background-color: var(--color-secondary);
-  border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 10rem;
   height: 10rem;
-  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  /* clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
     position: relative;
-    transition: transform 400ms ease-in-out;
-
+    transition: transform 400ms ease-in-out; */
 }
-.skillImageContainer:hover{
-    transform: rotate(360deg);
-    background-color: var( --color-primary);
+.skillImageContainer:hover {
+  transform: rotate(360deg);
+  background-color: var(--color-primary);
+  
 }
 
 .skillImageContainer img {
@@ -69,34 +72,16 @@
   font-weight: 500;
 }
 
-/* .socialIconsSpan {
-    width: 2.3rem;
-    height: 2rem;
-    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-    background-color: rgb(255, 250, 250);
-    position: relative;
-    transition: transform 400ms ease-in-out;
-} */
-
-
-
-
-
 @media screen and (max-width: 830px) {
-    .container {
-      
-        margin: 0 1rem;
-    }
-  .skills{
+  .container {
+    margin: 0 1rem;
+  }
+  .skills {
     width: 100%;
     flex-wrap: wrap;
   }
   .skillImageContainer {
-  
     width: 6rem;
     height: 6rem;
   }
-
-
-
 }
