--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -7,8 +7,8 @@
   display: flex;
   flex-direction: column;
   justify-content:space-evenly;
- width: 100%;
-padding: 2rem 6rem;
+  width: 100%;
+  padding: 2rem 0rem;
 
 }
 .contactSection, .copyRightSection {
@@ -41,7 +41,7 @@ letter-spacing: 1.5px;
 }
 
 hr{
-  margin-top: 3rem;
+  margin: .5rem 7rem;
  
 }
 
@@ -51,10 +51,10 @@ hr{
 }
 
 .copyRightSection{
-  margin-top: 2rem;
+  margin: 2rem 7rem;
   justify-content: space-between;
   height: 3rem;
-  font-family:'Roboto';
+  font-family:'Roboto'; 
 }
   
 @media screen and (max-width: 830px) {
