--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,17 @@
 @import "../../Var.css";
 
 .navbar {
-  position: relative;
+
+  position: fixed; /* Add this line */
+  top: 0; /* Ensures the navigation bar is at the top of the viewport */
   display: flex;
   align-items: center;
   justify-content: space-between;
- 	height:5rem;
   z-index: 2;
-  margin: 0 6rem;
+  padding: 1rem 6rem;
+  width: 100%; /* Set the width to 100% to make it full-width */
+  background-color: var(--color-secondary);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .title {
@@ -72,7 +76,7 @@
     flex-direction: column;
     align-items: flex-start;
 	  padding-top: 1.2rem;
-    margin: 0 1rem;
+    margin: 0;
    
   }
 
