--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -16,7 +16,7 @@
 
 .title {
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
   color: var(--color-text);
 }
@@ -75,18 +75,19 @@
   .navbar {
     flex-direction: column;
     align-items: flex-start;
-	  padding-top: 1.2rem;
     margin: 0;
+    padding: 1rem ;
    
   }
 
   .menu {
     position: absolute;
     right: 0;
-   flex-direction: column;
+    flex-direction: column;
     align-items: flex-end;
     gap: 11px;
     z-index: 3;
+    padding-right: 1rem;
   }
 
   .menuBtn {
