--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -5,7 +5,7 @@
   background-color: rgba(12, 12, 12, 0.6);
   border-radius: 1rem;
   padding: 3rem;
-  margin: 5rem 7rem;
+  margin: 5rem 6rem;
   z-index: 1;
   display: flex;
   flex-direction: column;
@@ -36,6 +36,7 @@
 .aboutDesciption{
     color: var(--color-text); 
     font-size: 1.2rem; 
+text-align: justify;
 }
 
 
